include/maplibre_native_c/style.h

typedef uint64_t mln_style_id_list;
typedef uint64_t mln_geojson_source_data;
typedef struct mln_image_stretch {
  float from;
  float to;
} mln_image_stretch;
typedef struct mln_image_content {
  float left;
  float top;
  float right;
  float bottom;
} mln_image_content;
typedef struct mln_style_source_info {
  uint32_t size;
  uint32_t type;
  uint32_t fields;
  size_t id_size;
  bool is_volatile;
  bool has_attribution;
  size_t attribution_size;
  size_t url_size;
  size_t tile_count;
  double min_zoom;
  double max_zoom;
  uint32_t scheme;
  mln_lat_lng_bounds bounds;
  uint32_t tile_size;
  uint32_t vector_encoding;
  uint32_t raster_encoding;
} mln_style_source_info;
typedef struct mln_style_tile_source_options {
  uint32_t size;
  uint32_t fields;
  double min_zoom;
  double max_zoom;
  mln_buffer_view attribution;
  uint32_t scheme;
  mln_lat_lng_bounds bounds;
  uint32_t tile_size;
  uint32_t vector_encoding;
  uint32_t raster_encoding;
} mln_style_tile_source_options;
typedef struct mln_geojson_source_options {
  uint32_t size;
  uint32_t fields;
  double min_zoom;
  double max_zoom;
  double tolerance;
  double cluster_max_zoom;
  mln_buffer_view cluster_properties;
  uint32_t tile_size;
  uint32_t buffer;
  uint32_t cluster_radius;
  uint32_t cluster_min_points;
  bool line_metrics;
  bool cluster;
  bool synchronous_tiling;
} mln_geojson_source_options;
typedef struct mln_canonical_tile_id {
  uint32_t z;
  uint32_t x;
  uint32_t y;
} mln_canonical_tile_id;
typedef void (*mln_custom_geometry_source_tile_callback)(
  void* user_data, mln_canonical_tile_id tile_id
);
typedef void (*mln_custom_geometry_source_release_callback)(void* user_data);
typedef struct mln_custom_geometry_source_options {
  uint32_t size;
  uint32_t fields;
  mln_custom_geometry_source_tile_callback fetch_tile;
  mln_custom_geometry_source_tile_callback cancel_tile;
  void* user_data;
  double min_zoom;
  double max_zoom;
  double tolerance;
  uint32_t tile_size;
  uint32_t buffer;
  bool clip;
  bool wrap;
  mln_custom_geometry_source_release_callback release_user_data;
} mln_custom_geometry_source_options;
typedef struct mln_premultiplied_rgba8_image {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  uint32_t stride;
  const uint8_t* pixels;
  size_t byte_length;
} mln_premultiplied_rgba8_image;
typedef struct mln_style_image_options {
  uint32_t size;
  uint32_t fields;
  const mln_image_stretch* stretch_x;
  size_t stretch_x_count;
  const mln_image_stretch* stretch_y;
  size_t stretch_y_count;
  mln_image_content content;
  uint32_t text_fit_width;
  uint32_t text_fit_height;
  float pixel_ratio;
  bool sdf;
} mln_style_image_options;
typedef struct mln_style_image_info {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  uint32_t stride;
  size_t byte_length;
  size_t stretch_x_count;
  size_t stretch_y_count;
  mln_image_content content;
  uint32_t text_fit_width;
  uint32_t text_fit_height;
  float pixel_ratio;
  bool sdf;
  bool has_content;
  bool has_text_fit_width;
  bool has_text_fit_height;
} mln_style_image_info;
typedef struct mln_style_transition_options {
  uint32_t size;
  uint32_t fields;
  double duration_ms;
  double delay_ms;
  bool enable_placement_transitions;
} mln_style_transition_options;
MLN_API mln_style_image_info mln_style_image_info_default(void) MLN_NOEXCEPT;
MLN_API mln_style_transition_options
mln_style_transition_options_default(void) MLN_NOEXCEPT;
MLN_API mln_status
mln_style_id_list_count(mln_style_id_list list, size_t* out_count) MLN_NOEXCEPT;
MLN_API mln_status mln_style_id_list_get(
  mln_style_id_list list, size_t index, mln_buffer_view* out_id
) MLN_NOEXCEPT;
MLN_API void mln_style_id_list_destroy(mln_style_id_list list) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_style_source_json(
  mln_map map, mln_buffer_view source_id, mln_buffer_view source_json
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_remove_style_source(
  mln_map map, mln_buffer_view source_id, bool* out_removed
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_style_source_exists(
  mln_map map, mln_buffer_view source_id, bool* out_exists
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_style_source_type(
  mln_map map, mln_buffer_view source_id, uint32_t* out_source_type,
  bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_style_source_info(
  mln_map map, mln_buffer_view source_id, mln_style_source_info* out_info,
  bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_copy_style_source_attribution(
  mln_map map, mln_buffer_view source_id, char* out_attribution,
  size_t attribution_capacity, size_t* out_attribution_size, bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_list_style_source_ids(
  mln_map map, mln_style_id_list* out_source_ids
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_geojson_source_url(
  mln_map map, mln_buffer_view source_id, mln_buffer_view url,
  const mln_geojson_source_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_geojson_source_data(
  mln_map map, mln_buffer_view source_id, mln_geojson_source_data data
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_geojson_source_url(
  mln_map map, mln_buffer_view source_id, mln_buffer_view url
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_geojson_source_data(
  mln_map map, mln_buffer_view source_id, mln_geojson_source_data data
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_vector_source_url(
  mln_map map, mln_buffer_view source_id, mln_buffer_view url,
  const mln_style_tile_source_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_vector_source_tiles(
  mln_map map, mln_buffer_view source_id, const mln_buffer_view* tiles,
  size_t tile_count, const mln_style_tile_source_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_raster_source_url(
  mln_map map, mln_buffer_view source_id, mln_buffer_view url,
  const mln_style_tile_source_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_raster_source_tiles(
  mln_map map, mln_buffer_view source_id, const mln_buffer_view* tiles,
  size_t tile_count, const mln_style_tile_source_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_raster_dem_source_url(
  mln_map map, mln_buffer_view source_id, mln_buffer_view url,
  const mln_style_tile_source_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_raster_dem_source_tiles(
  mln_map map, mln_buffer_view source_id, const mln_buffer_view* tiles,
  size_t tile_count, const mln_style_tile_source_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_custom_geometry_source(
  mln_map map, mln_buffer_view source_id,
  const mln_custom_geometry_source_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_custom_geometry_source_tile_data(
  mln_map map, mln_buffer_view source_id, mln_canonical_tile_id tile_id,
  mln_buffer_view data
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_invalidate_custom_geometry_source_tile(
  mln_map map, mln_buffer_view source_id, mln_canonical_tile_id tile_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_invalidate_custom_geometry_source_region(
  mln_map map, mln_buffer_view source_id, mln_lat_lng_bounds bounds
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_style_image(
  mln_map map, mln_buffer_view image_id,
  const mln_premultiplied_rgba8_image* image,
  const mln_style_image_options* options
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_remove_style_image(
  mln_map map, mln_buffer_view image_id, bool* out_removed
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_style_image_exists(
  mln_map map, mln_buffer_view image_id, bool* out_exists
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_style_image_info(
  mln_map map, mln_buffer_view image_id, mln_style_image_info* out_info,
  bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_copy_style_image_premultiplied_rgba8(
  mln_map map, mln_buffer_view image_id, uint8_t* out_pixels,
  size_t pixel_capacity, size_t* out_byte_length, bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_copy_style_image_stretches(
  mln_map map, mln_buffer_view image_id, mln_image_stretch* out_stretch_x,
  size_t stretch_x_capacity, size_t* out_stretch_x_count,
  mln_image_stretch* out_stretch_y, size_t stretch_y_capacity,
  size_t* out_stretch_y_count, bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_image_source_url(
  mln_map map, mln_buffer_view source_id, const mln_lat_lng* coordinates,
  size_t coordinate_count, mln_buffer_view url
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_add_image_source_image(
  mln_map map, mln_buffer_view source_id, const mln_lat_lng* coordinates,
  size_t coordinate_count, const mln_premultiplied_rgba8_image* image
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_image_source_url(
  mln_map map, mln_buffer_view source_id, mln_buffer_view url
) MLN_NOEXCEPT;